Fixed bug with overflowing header icons

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -6,8 +6,13 @@ header {
     border-bottom: 2px solid var(--dark-background);
 }
 
+.header-height {
+    height: 12vh;
+}
+
 #logo-image {
-    height: 60%;
+    height: 90%;
+    aspect-ratio: 3/1;
 }
 
 .dropdown {
@@ -70,7 +75,7 @@ header {
     }
     
     #logo-image {
-        width: 40%;
+        height: 40%;
     }
 
     .header-link {
